# aigc-reducer

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml
cli/: .env.example  .gitignore  README.md  pyproject.toml
cli/data/: ai_connectors.yaml
cli/src/aigc_reducer/: __init__.py  cli.py  detector.py  llm_client.py  report.py  rewriter.py
cli/src/aigc_reducer/detectors/: __init__.py  burstiness.py  cognitive.py
cli/src/aigc_reducer/styles/: __init__.py  base.py  mixed_en_zh.py
cli/tests/: test_detector.py  test_integration.py  test_rewriter.py
cli/tests/fixtures/: sample_paper.md
core/: pyproject.toml
core/src/aigc_reducer_core/: __init__.py  detector.py  llm_client.py  parser.py  rewriter.py
core/src/aigc_reducer_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/src/aigc_reducer_core/detectors/: burstiness.py  cognitive.py  connectors.py  llm_detector.py  perplexity.py  semantic_fingerprint.py
core/src/aigc_reducer_core/styles/: base.py  classical.py
core/tests/: conftest.py  test_core_injection.py  test_detector.py  test_parser.py  test_rewriter.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
web/alembic/: env.py
web/alembic/versions/: 1f2bb8489b5e_add_recharge_packages_payment_orders_.py  3b440754bc5b_create_users_and_credit_accounts_tables.py  40cd6f7b0693_task_id_uuid.py  6c639a98c549_seed_default_system_config_with_credits_.py  ae8b945382b2_add_system_config_table.py  b48a6eafdfd2_add_trade_no_to_credit_transactions.py  c07d1924904f_widen_risk_level_column_to_varchar_20.py  c6ba1a447bfb_add_reduction_tables.py  c7a1f3e2d8b4_migrate_user_ids_to_random_10digit.py
web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  main.tsx
web/frontend/src/api/: admin.ts  auth.ts  client.ts  credits.ts  orders.ts  reduce.ts
web/frontend/src/components/: AppLayout.tsx  ProtectedRoute.tsx
web/frontend/src/constants/: reduce.ts
web/frontend/src/pages/: Credits.tsx  Dashboard.tsx  (+5 more)
web/src/aigc_web/: __init__.py  config.py  database.py  dependencies.py  main.py
web/tests/: conftest.py  test_admin_auth.py  test_admin_router.py  test_admin_service.py  test_auth_router.py  test_auth_service.py  test_config.py  test_credit_service.py  test_credits_router.py  test_dependencies.py  test_models.py  test_order_service.py  test_order_timeout.py  test_payment_service.py  test_reduce_api.py  test_reduce_service.py  test_reduce_sse.py  test_sms.py  test_token.py
(+93 files in other folders)
