[project]
name = "aigc-reducer"
version = "0.1.0"
description = "降低论文 AIGC 查重率的命令行工具"
requires-python = ">=3.10"
dependencies = [
    "aigc-reducer-core",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
aigc-reduce = "aigc_reducer.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
aigc-reducer-core = { path = "../core" }

[tool.pytest.ini_options]
testpaths = ["tests"]
