[project]
name = "aigc-reducer-core"
version = "0.1.0"
description = "AIGC 检测与改写核心库 — 段落检测、风险评分、多风格改写"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "PyYAML>=6.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aigc_reducer_core = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
